[session] Introduce custom JVMTI agent to restore Thread.stop() on JDK20+